[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/object_state_machine/demo/godot_v3/player/player.gd" type="Script" id=1]
[ext_resource path="res://addons/object_state_machine/demo/godot_v3/player/state/idle.gd" type="Script" id=2]
[ext_resource path="res://addons/object_state_machine/demo/godot_v3/player/state/walk.gd" type="Script" id=3]
[ext_resource path="res://addons/object_state_machine/demo/godot_v3/player/state/air.gd" type="Script" id=4]
[ext_resource path="res://addons/object_state_machine/demo/godot_v3/player/state/jump.gd" type="Script" id=5]
[ext_resource path="res://addons/object_state_machine/demo/godot_v3/player/state/fall.gd" type="Script" id=6]
[ext_resource path="res://addons/object_state_machine/node_for_godot_v3/node_state_machine.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.0
height = 36.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )
CLASS_IDLE_STATE = ExtResource( 2 )
CLASS_WALK_STATE = ExtResource( 3 )
CLASS_AIR_STATE = ExtResource( 4 )
CLASS_JUMP_STATE = ExtResource( 5 )
CLASS_FALL_STATE = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -36.0
margin_right = 20.0
margin_bottom = 36.0
color = Color( 0.539062, 0.163655, 0.456587, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DirectionDebug" type="ColorRect" parent="."]
margin_left = -30.0
margin_top = -2.0
margin_right = 30.0
margin_bottom = 2.0
color = Color( 0.8, 0.180392, 0.956863, 1 )

[node name="LabelState" type="Label" parent="."]
margin_left = -18.0
margin_top = -51.0
margin_right = 20.0
margin_bottom = -37.0
text = "state"
align = 1

[node name="RayDirection" type="Node2D" parent="."]

[node name="RayCheckSlope" type="RayCast2D" parent="RayDirection"]
enabled = true
cast_to = Vector2( 70, 0 )
collision_mask = 2

[node name="NodeStateMachine" type="Node" parent="."]
script = ExtResource( 7 )
__meta__ = {
"graph_ref_connections": [ {
"from": "state_0",
"from_port": 0,
"to": "state_1",
"to_port": 0
}, {
"from": "state_1",
"from_port": 0,
"to": "state_2",
"to_port": 0
}, {
"from": "state_2",
"from_port": 0,
"to": "state_3",
"to_port": 0
}, {
"from": "state_0",
"from_port": 1,
"to": "state_3",
"to_port": 1
}, {
"from": "state_4",
"from_port": 1,
"to": "state_0",
"to_port": 0
}, {
"from": "state_4",
"from_port": 0,
"to": "state_2",
"to_port": 0
}, {
"from": "state_4",
"from_port": 0,
"to": "state_1",
"to_port": 0
} ],
"graph_ref_nodes_info": [ "Jump", "Air", "Walk", "Fall", "Idle" ],
"graph_ref_nodes_mode": [ 1, 1, 1, 1, 0 ],
"graph_ref_nodes_name": [ "state_1", "state_2", "state_4", "state_3", "state_0" ],
"graph_ref_nodes_offset": [ Vector2( 511, -10.5 ), Vector2( 725, 82.5 ), Vector2( 73, 81.5 ), Vector2( 965, 172.5 ), Vector2( 272, 171.5 ) ],
"graph_ref_scroll": Vector2( -37, -97 ),
"graph_ref_state_count": 5,
"graph_ref_version": 1,
"graph_ref_zoom": 1.0
}
